# cmake_link_features

./: CMakeLists.txt  README.md  main.cpp
shared_example/: CMakeLists.txt  shared_example.cpp
shared_example/include/shared_example/: shared_example.h
static_example/: CMakeLists.txt  static_example.cpp  static_internal.cpp  static_internal.h
static_example/include/static_example/: static_example.h
